fikset meny border under spillet fikset noen sma bugs i spillet

--- a/Spillet/play - Copy.css
+++ b/Spillet/play - Copy.css
@@ -89,7 +89,7 @@ body {
     background-color: black;
     color: white;
     width: 100%;
-    padding: 2%;
+    padding: 10%;
     float: left;
 }
 
